welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: not found: value pas
       while (dejafait!=pas) { 
                        ^